--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@ tr {
 td{
     width: 133px;
     height: 133px;
-    border: 5px solid black;
-    
+    border: 5px solid black;  
+    cursor: pointer;
+}
+td:hover {
+    background-color: rgba(234, 23, 56, 0.05);
 }
 tr:first-child td {
     border-top: 0;
@@ -30,6 +33,8 @@ table {
 .shape {
     height: 70px;
     width: 70px;
-    position: absolute;
-    
+    position: absolute; 
+}
+.d-none {
+    display: none;
 }
