--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
 tr {
     width: 399px;
 }
@@ -37,4 +45,26 @@ table {
 }
 .d-none {
     display: none;
+}
+.player-panel{
+    display: flex;
+    margin-top: 48px;
+    margin-bottom: 48px;
+}
+.player {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 12px;
+    margin-right: 12px;
+    font-size: 26px;
+    font-weight: 500;
+}
+.player img{
+    height: 70px;
+    width: 70px;
+    margin-right: 12px;
+}
+.opacity {
+    opacity: 0.5;
 }
