--- a/style.css
+++ b/style.css
@@ -44,11 +44,11 @@ table {
     position: absolute; 
 }
 .d-none {
-    display: none;
+    display: none !important;
 }
 .player-panel{
     display: flex;
-    margin-top: 48px;
+    margin-top: 70px;
     margin-bottom: 48px;
 }
 .player {
@@ -61,10 +61,59 @@ table {
     font-weight: 500;
 }
 .player img{
-    height: 70px;
-    width: 70px;
+    height: 50px;
+    width: 50px;
     margin-right: 12px;
 }
 .opacity {
     opacity: 0.5;
 }
+.row-winner {
+    height: 12px;
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: relative;
+    z-index: 200;
+    transform: scale(0.0) !important;
+    transition: transform 225ms ease-in-out;
+}
+.rotate-90 {
+    transform: rotate(90deg);
+}
+.game-over {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+
+.game-over img {
+    height: 60%;
+    margin-top: 40px;
+    object-fit: contain;
+}
+.reset-button {
+    border: 4px solid black;
+    position: absolute;
+    top: 200px;
+    height: 78px;
+    width: 130px;
+    background-color: rgb(85, 25, 17);
+    color: rgb(250, 233, 120);
+    font-size: 26px;
+    font-weight: 600;
+    cursor: pointer;
+    z-index: 1000;
+    border-radius: 6px;
+}
+
+.reset-button:hover {
+    background-color:rgb(187, 86, 35) ;
+}
+
