--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 100vh;
 }
 
 
@@ -65,6 +66,16 @@ table {
     width: 50px;
     margin-right: 12px;
 }
+.player-1 {
+    position: absolute;
+    left: 8vw;
+    top: 8vh;
+}
+.player-2 {
+    position: absolute;
+    right: 8vw;
+    top: 8vh;
+}
 .opacity {
     opacity: 0.5;
 }
@@ -81,9 +92,11 @@ table {
     transform: rotate(90deg);
 }
 .game-over {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
+    left: 0;
+    right: 0;
     z-index: 999;
     display: flex;
     align-items: center;
@@ -94,26 +107,27 @@ table {
 
 
 .game-over img {
-    height: 60%;
+    height: 95%;
+    width: 95%;
     margin-top: 40px;
     object-fit: contain;
 }
 .reset-button {
     border: 4px solid black;
     position: absolute;
-    top: 200px;
+    bottom: 12px;
     height: 78px;
-    width: 130px;
-    background-color: rgb(85, 25, 17);
-    color: rgb(250, 233, 120);
+    width: 30%;
+    background-color: rgb(28, 11, 127);
+    color: rgb(255, 250, 255);
     font-size: 26px;
-    font-weight: 600;
+    font-weight: 700;
     cursor: pointer;
     z-index: 1000;
     border-radius: 6px;
 }
 
 .reset-button:hover {
-    background-color:rgb(187, 86, 35) ;
+    background-color:rgb(41, 25, 142);
 }
 
