--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ td{
     height: 133px;
     border: 5px solid black;  
     cursor: pointer;
+    box-shadow: 0 0 8px 2px;
+    background-color: rgba(230, 160, 13);
 }
 td:hover {
     background-color: rgba(234, 23, 56, 0.05);
