--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ tr td:last-child {
 }
 table {
     border-collapse: collapse;
+    margin-bottom: 100px;
 }
 .shape-container {
     display: flex;
@@ -131,5 +132,23 @@ table {
 
 .reset-button:hover {
     background-color:rgb(41, 25, 142);
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0;
+    background-color: rgba(0, 24, 0, 1);
+    color: rgba(250, 250, 250, 0.4);
+    height: 60px;
+    margin-top: 12px;
+    padding: 12px;
+}
+
+.footer a {
+    color: rgba(100, 100, 250, 1) !important;
+ 
 }
 
